[gd_scene load_steps=14 format=2]

[ext_resource path="res://Title/Title_Screen.gd" type="Script" id=1]
[ext_resource path="res://Material/Font/Menu_Screen/Armored Soul (1).png" type="Texture" id=2]
[ext_resource path="res://Material/Background/Magic_Cliff/far-grounds.png" type="Texture" id=3]
[ext_resource path="res://Material/Background/Magic_Cliff/sea.png" type="Texture" id=4]
[ext_resource path="res://Material/Background/Magic_Cliff/clouds.png" type="Texture" id=5]
[ext_resource path="res://Material/Background/Magic_Cliff/sky.png" type="Texture" id=6]
[ext_resource path="res://Material/Font/Menu_Screen/Start_Normal.png" type="Texture" id=7]
[ext_resource path="res://Material/Font/Menu_Screen/Start_Hover.png" type="Texture" id=8]
[ext_resource path="res://Material/Font/Menu_Screen/Continue.png" type="Texture" id=9]
[ext_resource path="res://Material/Font/Menu_Screen/Continue_Hover.png" type="Texture" id=10]
[ext_resource path="res://Material/Font/Menu_Screen/Exit_Normal.png" type="Texture" id=11]
[ext_resource path="res://Material/Font/Menu_Screen/Exit_Hover.png" type="Texture" id=12]
[ext_resource path="res://Sound/Music/アーマードコアネクサスをGB風にしてみた。（チップチューン）.wav" type="AudioStream" id=13]

[node name="Title_Screen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Sprite" parent="Background"]
scale = Vector2( 0.533333, 0.555556 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -50 )

[node name="Land" type="Sprite" parent="Background"]
position = Vector2( 384, 448 )
scale = Vector2( 1.03896, 1.45455 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sea" type="Sprite" parent="Background"]
position = Vector2( 0, 384 )
scale = Vector2( 9.14286, 2.33333 )
z_index = -1
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Cloud" type="Sprite" parent="Background"]
position = Vector2( 0, 131.5 )
scale = Vector2( 1.88235, 2.0339 )
z_index = -2
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sky" type="Sprite" parent="Background"]
scale = Vector2( 9.14286, 1.26316 )
z_index = -3
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 13 )
volume_db = -8.0
autoplay = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = 320.0
margin_right = 875.0
margin_bottom = 840.0
rect_scale = Vector2( 0.25, 0.25 )
custom_constants/separation = 60
__meta__ = {
"_edit_lock_": true
}

[node name="Start_Button" type="TextureButton" parent="Control/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 250.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Continue_Button" type="TextureButton" parent="Control/VBoxContainer"]
margin_top = 310.0
margin_right = 1000.0
margin_bottom = 560.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Exit_Button" type="TextureButton" parent="Control/VBoxContainer"]
margin_top = 620.0
margin_right = 1000.0
margin_bottom = 870.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Control/VBoxContainer/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
